envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0  # 모든 네트워크 인터페이스에서 수신
          port_value: 8080   # 클라이언트가 접속할 포트

      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: grpc_service  # 백엔드 gRPC 서버로 전달
                            timeout: 0s
                http_filters:
                  - name: envoy.filters.http.grpc_web  # gRPC-Web 필터 (선택적)
                  - name: envoy.filters.http.router  # 기본 라우팅 필터

  clusters:
    - name: grpc_service  # gRPC 서버와 연결할 클러스터 정의
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: grpc_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1  # gRPC 서버 주소
                      port_value: 50051   # gRPC 서버 포트
